# granular-clock

./: .gitignore  Cargo.toml  README.md  Trunk.toml  _headers  index.html  simulation.toml
.cargo/: config.toml
.github/workflows/: deploy-pages.yml
assets/shaders/: bitonic_sort.wgsl  cell_ranges.wgsl  collision.wgsl  hash_keys.wgsl  integrate.wgsl  particle_instancing.wgsl  particle_to_instance.wgsl  physics_types.wgsl
src/: debug.rs  lib.rs  main.rs
src/analysis/: distribution.rs  mod.rs
src/gpu/: buffers.rs  instance_writer.rs  mod.rs  node.rs  pipeline.rs  plugin.rs  readback.rs  tests.rs
src/physics/: collision.rs  contact.rs  integrator.rs  mod.rs  particle.rs  spatial_hash.rs  tests.rs
src/physics/cpu/: collision.rs  contact.rs  instance_writer.rs  integrator.rs  mod.rs  simulation.rs  spatial_hash.rs
src/physics/gpu/: buffers.rs  instance_writer.rs  mod.rs  node.rs  pipeline.rs  plugin.rs  readback.rs  shaders.rs  tests.rs
src/rendering/: camera.rs  extract_resources.rs  gpu_instancing.rs  instance_cpu_writer.rs  instance_data.rs  materials.rs  mod.rs  shaders.rs
src/simulation/: config.rs  config_toml.rs  container.rs  mod.rs  oscillation.rs  state.rs  systems.rs  time.rs
src/simulation/constants/: camera.rs  config.rs  container.rs  mod.rs  oscillation.rs  physics.rs  time.rs
src/ui/: bevy_controls.rs  bevy_graph.rs  egui_panels.rs  handlers.rs  markers.rs  mod.rs  setup.rs
