[package]
name = "granular-clock"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { version = "0.18", default-features = false, features = ["default_app", "default_platform", "3d_bevy_render", "picking", "webgpu"] }
bevy_egui = "0.39.1"
bevy_panorbit_camera = { version = "0.34.0", features = ["bevy_egui"] }
bytemuck = { version = "1.21", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
egui_plot = "0.34.0"
rayon = "1.11"
rand = "0.9"
parking_lot = "0.12.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
# Native-only dependencies

[target.'cfg(target_family = "wasm")'.dependencies]
# WASM-only dependencies
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2"
wasm-bindgen-rayon = { version = "1.3", features = ["no-bundler"] }

[dev-dependencies]
pollster = "0.4"
wgpu = "27.0.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"
lto = true
