[package]
name = "granular-clock"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", default-features = false, features = ["default_app", "default_platform", "bevy_core_pipeline", "3d_bevy_render", "picking", "webgpu"] }
bevy_egui = "0.39.1"
bevy_panorbit_camera = { version = "0.34.0", features = ["bevy_egui"] }
bytemuck = { version = "1.21", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
egui_plot = "0.34.0"
rand = "0.9"
parking_lot = "0.12.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"

[target.'cfg(target_family = "wasm")'.dependencies]
# WASM-only dependencies
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
pollster = "0.4"
wgpu = "27.0.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3

[profile.release-wasm]
panic = "abort"
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
